--- a/style.css
+++ b/style.css
@@ -1,1 +1,195 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;900&display=swap');
 
+h1,h2,h3{
+   font-family: 'Roboto', sans-serif;
+}
+*{
+   margin: 0px;
+}
+td, th{
+   border: 2px solid black;
+}
+.bloc-1{
+   background-color: aqua;
+   color: orange;
+}
+.bloc-2{
+   background-color: coral;
+   color: blue;
+}
+.bloc-3{
+   background-color: darkseagreen;
+   color: brown;
+}
+.bloc-4{
+   background-color: hotpink;
+   color: darkgoldenrod;
+}
+.blocs{
+   width: 100%;
+   display: flex;
+   flex-direction: row;
+   flex-wrap: wrap;
+}
+#z1{
+   text-align: center;
+   width: 80px;
+   height: 20px;
+   background-color: blueviolet;
+   border: 1px solid black;
+   position: relative;
+   color: aqua;
+}
+#z2{
+   text-align: center;
+   width: 110px;
+   height: 20px;
+   background-color: chartreuse;
+   border: 1px solid black;
+   position: relative;
+}
+#z3{
+   text-align: center;
+   width: 150px;
+   height: 20px;
+   background-color: orange;
+   border: 1px solid black;
+   position: relative;
+}
+#z4{
+   text-align: center;
+   width: 200px;
+   height: 20px;
+   background-color: cornflowerblue;
+   border: 1px solid black;
+   position: relative;
+}
+#z1, #z2, #z3, #z4{
+   position: absolute;
+   bottom: 0;
+   left: 0;
+   margin: 0px;
+   padding: 6px;
+}
+ol, p, table, img{
+   margin-bottom: 70px;
+}
+.zag{
+   font-size: 120%;
+}
+
+@media (min-width: 992px){
+   .col-lg-1 {
+   width: 8.33%;
+   }
+   .col-lg-2 {
+   width: 16.66%;
+   }
+   .col-lg-3 {
+   width: 25%;
+   }
+   .col-lg-4 {
+   width: 33.33%;
+   }
+   .col-lg-5 {
+   width: 41.66%;
+   }
+   .col-lg-6 {
+   width: 50%;
+   }
+   .col-lg-7 {
+   width: 58.33%;
+   }
+   .col-lg-8 {
+   width: 66.66%;
+   }
+   .col-lg-9 {
+   width: 75%;
+   }
+   .col-lg-10 {
+   width: 83.33%;
+   }
+   .col-lg-11 {
+   width: 91.66%;
+   }
+   .col-lg-12 {
+   width: 100%;
+   }
+   
+}
+@media (min-width: 769px) and (max-width: 992px){
+   .col-md-1 {
+   width: 8.33%;
+   }
+   .col-md-2 {
+   width: 16.66%;
+   }
+   .col-md-3 {
+   width: 25%;
+   }
+   .col-md-4 {
+   width: 33.33%;
+   }
+   .col-md-5 {
+   width: 41.66%;
+   }
+   .col-md-6 {
+   width: 50%;
+   }
+   .col-md-7 {
+   width: 58.33%;
+   }
+   .col-md-8 {
+   width: 66.66%;
+   }
+   .col-md-9 {
+   width: 75%;
+   }
+   .col-md-10 {
+   width: 83.33%;
+   }
+   .col-md-11 {
+   width: 91.66%;
+   }
+   .col-md-12 {
+   width: 100%;
+   }
+}
+@media (max-width: 768px) {
+   .col-sd-1 {
+   width: 8.33%;
+   }
+   .col-sd-2 {
+   width: 16.66%;
+   }
+   .col-sd-3 {
+   width: 25%;
+   }
+   .col-sd-4 {
+   width: 33.33%;
+   }
+   .col-sd-5 {
+   width: 41.66%;
+   }
+   .col-sd-6 {
+   width: 50%;
+   }
+   .col-sd-7 {
+   width: 58.33%;
+   }
+   .col-sd-8 {
+   width: 66.66%;
+   }
+   .col-sd-9 {
+   width: 75%;
+   }
+   .col-sd-10 {
+   width: 83.33%;
+   }
+   .col-sd-11 {
+   width: 91.66%;
+   }
+   .col-sd-12 {
+   width: 100%;
+   }
+}
