--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ td,th{
 }
 .bloc-4{
    background-color: hotpink;
-   color: crimson;
+   color: orange;
    font-family: 'Source Serif Pro', serif;
    position: relative;
 }
