--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ td,th{
    position: relative;
 }
 .bloc-4{
-   background-color: hotpink;
-   color: orange;
+   background-color: orange;
+   color: crimson;
    font-family: 'Source Serif Pro', serif;
    position: relative;
 }
