--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ td,th{
    height: 20px;
    border: 1px solid black;
    background-color: indigo;
-   color: bisque;
+   color: orange;
    text-align: center;
 }
 
